# Modern-ThreadPool

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench_thread_pool.cpp
examples/: basic_usage.cpp  parallel_algorithms_demo.cpp
include/mtp/: parallel_algorithms.hpp  thread_pool.hpp
tests/: mini_test.hpp  test_parallel_algorithms.cpp  test_thread_pool.cpp
